fixed overlapping problem with cursor

--- a/css/privacy.css
+++ b/css/privacy.css
@@ -49,7 +49,7 @@ p {
 .redirect-icon {
   position: absolute;
   right: 57px;
-  top: 151px;
+  top: 125px;
   cursor: pointer;
   width: 32px;
   height: 32px;
